welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: not a legal formal parameter
	if (you => 8 || date => 8 && !(you<=2) && !(date<-2)) {
                     ^dateFashion:2: error: ')' expected but '<-' found.
	if (you => 8 || date => 8 && !(you<=2) && !(date<-2)) {
                                                        ^dateFashion:9: error: ')' expected but '}' found.
}
^