welcome.lessons.welcome.bat.bool2.DateFashion.scala.code
def dateFashion(you:Int, date:Int):Int = {
	if (you => 8 || date => 8 && !(you<=2) && !(date<-2)) {
		return 2;
	}
	else if {
		return 1;
	}
	return 0;
}
